[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=3.0"]
build-backend = "scikit_build_core.build"

[project]
name = "dxcam_cpp"
version = "0.2.5"
requires-python = ">=3.8"
authors = [
    { name = "Fidel Yin", email = "fidel.yin@hotmail.com" }
]
description = "A high performance screen capturing library for Windows rewriting DXcam in C++"
readme = "python/README.md"
keywords = ["windows", "screenshot", "capture"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: C++",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
]

[project.urls]
Homepage = "https://github.com/Fidelxyz/DXCam-CPP"
Repository = "https://github.com/Fidelxyz/DXCam-CPP"
Issues = "https://github.com/Fidelxyz/DXCam-CPP/issues"

[tool.scikit-build]
minimum-version = "build-system.requires"
wheel.packages = ["python/src/dxcam_cpp"]

[tool.scikit-build.cmake.define]
CMAKE_TOOLCHAIN_FILE = { env = "CMAKE_TOOLCHAIN_FILE" }
X_VCPKG_APPLOCAL_DEPS_INSTALL = true
BUILD_PYTHON = true
INSTALL_PYTHON_ONLY = true

[tool.cibuildwheel]
build-frontend = "build[uv]"
archs = ['AMD64']
